Cambio para traducir los títulos en las distintas páginas

--- a/src/app/pages/actors/actors.page.html
+++ b/src/app/pages/actors/actors.page.html
@@ -1,4 +1,4 @@
-<app-header title="Actores"></app-header>
+<app-header [title]="'menu.options.actors' | translate "></app-header>
 
 <ion-content class="ion-padding">
 Aquí veremos el listado de Actores.
