--- a/src/app/pages/companies/companies.page.html
+++ b/src/app/pages/companies/companies.page.html
@@ -1,4 +1,4 @@
-<app-header title="Compañías"></app-header>
+<app-header [title]="'menu.options.companies' | translate "></app-header>
 
 <ion-content class="ion-padding">
 Aquí veremos el listado de Compañias.
