Creado el servicio para recoger el parámetro de id de película y mostrar el dato en el header de fimls details page

--- a/src/app/pages/films/details/details.page.html
+++ b/src/app/pages/films/details/details.page.html
@@ -1,4 +1,4 @@
-<app-header title="Titanic" [backButton]="true"></app-header>
+<app-header [title]="film.title" [backButton]="true"></app-header>
 
 <ion-content>
 
