--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,21 @@
 <ion-app>
-  <ion-menu side="start" menuId="main" contentId="main">
-    <ion-header>
-      <ion-toolbar color="primary">
-        <ion-title>{{ 'menu.title' | translate }}</ion-title>
-      </ion-toolbar>
-    </ion-header>
-    <ion-content>
-      <ion-list>
-        <ion-menu-toggle *ngFor="let option of menuOptions | async">
-          <ion-item [routerLink]="option.path" detail>
-            {{option.name | translate}}
-          </ion-item>
-        </ion-menu-toggle>
-      </ion-list>
-    </ion-content>
-  </ion-menu>
-  <ion-router-outlet id="main"></ion-router-outlet>
+  <ion-split-pane contentId="main" when="md"  (ionSplitPaneVisible)="onSplitPaneVisible(event)">
+    <ion-menu side="start" menuId="main" contentId="main">
+      <ion-header>
+        <ion-toolbar color="primary">
+          <ion-title>{{ 'menu.title' | translate }}</ion-title>
+        </ion-toolbar>
+      </ion-header>
+      <ion-content>
+        <ion-list>
+          <ion-menu-toggle *ngFor="let option of menuOptions | async" autoHide="false">
+            <ion-item [routerLink]="option.path" detail>
+              {{option.name | translate}}
+            </ion-item>
+          </ion-menu-toggle>
+        </ion-list>
+      </ion-content>
+    </ion-menu>
+    <ion-router-outlet id="main"></ion-router-outlet>
+  </ion-split-pane>
 </ion-app>
